syntax = "proto3";

package msg_delivery.v1;

import "google/protobuf/timestamp.proto";

message OneMsg {
  oneof data {
    string text = 2;
  }
}

message SendMsgRequest {
  uint64 session_id = 1;
  google.protobuf.Timestamp time = 2;
  repeated OneMsg bundle_msg = 3;
}

message FetchMsgRequest {
  google.protobuf.Timestamp time = 1;
}

message Msg {
  google.protobuf.Timestamp time = 1;
  uint64 msg_id = 2;
  repeated OneMsg bundle_msg = 3;
  uint64 session_id = 4;
}

message SendMsgResponse {
  uint64 msg_id = 1;
}
